# mediapipe_dual_arm_control

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
config/planning/: chomp.yaml  ompl_planning.yaml
config/pose_tracking/: dual_arm_left_config_pose_tracking.yaml  dual_arm_right_config_pose_tracking.yaml
config/robot/: panda.urdf.xacro  panda_arm_macro.xacro  ros2_controllers.yaml
config/rviz/: dual_arm_teleop.rviz
docker/: .dockerignore  Dockerfile
launch/: dual_arm_teleop.launch.py
scripts/: hand_pose_publisher_node.py  hand_utils.py
src/: dual_arm_servo_node.cpp
